# mrfox

./: README.rst  pyproject.toml
mrfox/: bot.py  commands.py  config.py  db.py  main.py  rutracker.py  torrent.py
tests/: test_mrfox.py
